--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,9 @@
         "symfony/http-client": "4.3.*",
         "symfony/intl": "4.3.*",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "*",
+        "symfony/orm-pack": "^1.0",
         "symfony/process": "4.3.*",
+        "symfony/profiler-pack": "^1.0",
         "symfony/security-bundle": "4.3.*",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.1",
@@ -28,13 +29,11 @@
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "squizlabs/php_codesniffer": "3.*",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
-        "symfony/profiler-pack": "*",
-        "symfony/test-pack": "*",
-        "symfony/web-server-bundle": "4.3.*",
-        "squizlabs/php_codesniffer": "3.*",
-        "phpunit/phpunit": "6.5.14"
+        "symfony/test-pack": "^1.0",
+        "symfony/web-server-bundle": "4.3.*"
     },
     "config": {
         "preferred-install": {
