--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,8 @@
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.2",
+        "phpmd/phpmd": "^2.6",
         "squizlabs/php_codesniffer": "3.*",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
